--- a/src/general/_general.scss
+++ b/src/general/_general.scss
@@ -4,5 +4,10 @@
 * {
   margin: 0;
   padding: 0;
-  outline: none;
+  box-sizing: border-box;
+  outline: none !important;
+
+  &::before, &::after, &:hover, &:focus, &:active {
+    outline: none !important;
+  }
 }
