Pseudo element update

--- a/src/general/_general.scss
+++ b/src/general/_general.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   outline: none !important;
 
-  &::before, &::after, &:hover, &:focus, &:active {
+  &::before, &::after, &:before, &:after, &:hover, &:focus, &:active {
     outline: none !important;
   }
 }
