--- a/src/general/_general.scss
+++ b/src/general/_general.scss
@@ -11,3 +11,12 @@
     outline: none !important;
   }
 }
+
+// native elements
+
+html {
+  font-size: 1rem;
+  scroll-behavior: smooth;
+}
+
+// native elements end
